# MPASE

./: .gitignore  LICENSE  README.md  pyproject.toml
evaluation/: README.md  requirements.txt  summary_figures.py
evaluation/data/: README.md  generate_synthetic.py
evaluation/data/synthetic/: blob.npy  helix.npy  s_shape.npy  two_blob.npy
evaluation/data/usage_case_result/: chr1_shape_metrics.csv  chr1_shape_metrics.xlsx  generate.py  metrics_data.json
evaluation/eval1_alignment/: README.md  run.py
evaluation/eval2_ablation/: README.md  run.py
evaluation/eval3_stability/: README.md  run.py
evaluation/eval4_multichrom/: README.md  run.py
evaluation/eval_alignment_ablation/: run.py
evaluation/eval_baseline_comparison/: baselines.py  combined_all_chroms.csv  run.py  timing_summary.csv
evaluation/eval_separation_analysis/: chr1_table.py  chr1_yz_100pct_table.csv  chr1_yz_100pct_table.tex  run.py  separation_table.py
evaluation/eval_shape_representation/: run.py
evaluation/eval_synthetic/: run.py
evaluation/eval_synthetic_shapes/: run.py
examples/: example.ipynb  minimal_run.py  prototype_3d_summary.py
examples/mpase_data/: background_mask.json  layout.json  manifest.json  membership.json  meta_data.json  metrics_data.json  scales.json
examples/mpase_data/contour/: S_contour.json  (+1 more)
examples/prototype_3d_out/: summary_3d.json
src/mpase/: __init__.py  create_grid_planes.py  export_data_for_visd3three.py  hdr_bootstrap.py  io_load.py  main_run.py  metrics_calculation.py  point_alignment.py  point_fraction.py  types.py  visualization_save_image.py
(+46 files in other folders)
